css/home.css
/* ==========================================================================
G E N E R A L
========================================================================== */

html {
  overflow-x: hidden;
}

body {
  height: 100%;
  margin: 0;
  background: #fff;
  font-weight: 400;
  font-family: 'Montserrat', sans-serif;
  -webkit-box-sizing: border-box;
  -moz-box-sizing: border-box;
  box-sizing: border-box;
  -webkit-font-smoothing: subpixel-antialiased;
  color: #abacae;
  line-height: 25px;
  -webkit-backface-visibility: hidden;
  backface-visibility: hidden;
  overflow-x: hidden;
}

section {
  padding: 100px 0;
}

.section-title {
  margin-bottom: 50px;
  text-align: center;
  color: #7E947F;
  clear: both;
  font-weight: 500;
  line-height: 26px;
}

/* ==========================================================================
N A V B A R
========================================================================== */
nav {
  background: transparent;
}

nav img{
  margin: 0 auto;
}

nav .container {
  display: flex;
  justify-content: space-between;
}

.nav-on-scroll {
  background-color: #fff;
  box-shadow: 0px 3px 6px 3px rgba(0, 0, 0, 0.06);
  -webkit-animation-duration: 1s;
  animation-duration: 1s;
}

.nav-item {
  padding: 0 20px;
}

.nav-item a {
  color: #747474;
  /* color: #FFF; */
}

.navbar .fa-bars {
  font-size: 25px;
}

.navbar .menu-hide {
  display: none;
}

.navbar-brand {
  color: #078010;
  font-weight: bold;
}

.navbar-brand img{
  height: 40px;
}

@media screen and (min-width: 992px) {
  #navbar1 {
    /* width: 100%; */
  }
}


@media screen and (max-width: 991px) {
  nav {
    background-color: #fff;
    box-shadow: 0px 3px 6px 3px rgba(0, 0, 0, 0.06);
    -webkit-animation-duration: 1s;
    animation-duration: 1s;
  }

  .navbar-collapse {
    margin-top: 20px;
  }

  .nav-item a {
    text-align: center;
    color: #747474;
  }
}


/* ==========================================================================
BANNER
========================================================================== */
#banner {
  height: 700px;
  background: linear-gradient(to right, #e2e7ef 0%, #ffffff 100%);
  display: flex;
  flex-direction: column;
  justify-content: flex-end;
  align-items: center;
}

#banner .text {
  width: 80%;
  max-width: 800px;
  margin: 100px auto;
  text-align: center;
}

.banner-img img {
  width: 80%;
  max-height: 80%;
  max-width: 800px;
  display: block;
  margin: 0 auto;
}

/* ==========================================================================
UPCOMMING EVENTS
========================================================================== */
.project .thumbnail{
    border: 0;
    padding: 0;
    -webkit-box-shadow:0px 1.732px 5px 0px rgba(218, 213, 213, 0.42);
            box-shadow:0px 1.732px 5px 0px rgba(218, 213, 213, 0.42);
    margin-bottom: 50px;
}

.project .thumbnail:hover{
      -webkit-box-shadow: 2.5px 4.33px 11px 0px rgba(136, 136, 136, 0.24);
              box-shadow: 2.5px 4.33px 11px 0px rgba(136, 136, 136, 0.24);
}

.project .thumbnail:hover .project__title {
        color: #00aafe;
}

.project .thumbnail img {
      width: 100%;
}

.project .thumbnail .event-info{
      padding: 20px;
}

.project__title {
    font-size: 16px;
    color: #4f4f4f;
    font-weight: bold;
}

.event-info p {
  margin-bottom: 5px;
}

.event-card {
  display: flex;
  justify-content: center;
}

/* ==========================================================================
About US
========================================================================== */
#about-us {
  font-size: 1.1rem;
  font-weight: 200;
}

ul.socialIcons {
    padding: 0;
    margin: 0 auto;
}

.socialIcons li {
    background: yellow;
    list-style: none;
    display: inline-block;
    margin: 15px;
    border-radius: 2em;
    overflow:hidden;
}

.socialIcons li a {
    display: block;
    padding: 0.8em 0.9em;
    max-width: 3em;
    min-width: 3em;
    height: 3em;
    white-space: nowrap;
    line-height: 1.5em;
    transition:.5s;
    text-decoration: none;
    font-family: arial;
    color: #fff;
}

.socialIcons li i {
    margin-right:1.2em;
}

.socialIcons li:hover a {
    max-width:200px;
    padding-right:1.1em;
}

.socialIcons .facebook {
    background: #3b5998;
    box-shadow: 0 0 16px #3b5998;
}

.socialIcons .instagram {
    background: #cd486b;
    box-shadow: 0 0 16px #cd486b;
}

.socialIcons .slack {
    background: #E3BF00;
    box-shadow: 0 0 16px #E3BF00;
}

#about-us .join-btn {
  width: 150px;
  margin-top: 20px;
  -webkit-border-radius: 12% 50%;
  cursor: pointer;
}


/* ==========================================================================
WHAT WE DO
========================================================================== */

#what-we-do .container {
  display: flex;
  align-items: center;
}

#what-we-do h4 {
  color: #000;
}

#what-we-do .item p {
  font-size: 1.1rem;
  font-weight: 200;
}

#what-we-do img {
  width: 100%;
  max-width: 800px;
  margin-bottom: 25px;
}

#what-we-do .description {
  width: 70%;
  max-width: 800px;
}

#what-we-do .description .item {
  margin: 25px auto;
}

@media (max-width: 991px) {
  #what-we-do .container {
    flex-direction: column;
    text-align: center;
  }

  #what-we-do img {
    width: 80%;
    text-align: center;
  }

  #what-we-do .description {
    width: 90%;
  }
}

/* ==========================================================================
PICTURES OF LAST EVENT
========================================================================== */
.container.gallery-container {
    background-color: #fff;
    color: #35373a;
    min-height: 100vh;
    /* padding: 30px 50px; */
}

.gallery-container h1 {
    text-align: center;
    margin-top: 50px;
    font-family: 'Droid Sans', sans-serif;
    font-weight: bold;
}

.gallery-container p.page-description {
    text-align: center;
    margin: 25px auto;
    font-size: 18px;
    color: #999;
}

.tz-gallery {
    /* padding: 40px; */
}

/* Override bootstrap column paddings */
.tz-gallery .row > div {
    padding: 2px;
}

.tz-gallery .lightbox img {
    width: 100%;
    border-radius: 0;
    position: relative;
}

.tz-gallery .lightbox:before {
    position: absolute;
    top: 50%;
    left: 50%;
    margin-top: -13px;
    margin-left: -13px;
    opacity: 0;
    color: #fff;
    font-size: 26px;
    font-family: 'Glyphicons Halflings';
    content: '\e003';
    pointer-events: none;
    z-index: 9000;
    transition: 0.4s;
}


.tz-gallery .lightbox:after {
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    opacity: 0;
    background-color: rgba(46, 132, 206, 0.7);
    content: '';
    transition: 0.4s;
}

.tz-gallery .lightbox:hover:after,
.tz-gallery .lightbox:hover:before {
    opacity: 1;
}

.baguetteBox-button {
    background-color: transparent !important;
}

@media(max-width: 768px) {
    body {
        padding: 0;
    }
}

/* ==========================================================================
B O A R D
========================================================================== */
.officers {
  padding-top: 7rem;
  padding-bottom: 7rem;
}

.officers .row {
  margin-bottom: 50px;
}

.officers .col-lg-4 {
  float: left;
}

.officers .officer-item {
  max-width: 18rem;
}

.officers .officer-item img {
  max-width: 12rem;
  -webkit-box-shadow: 0px 5px 5px 0px #adb5bd;
  box-shadow: 0px 5px 5px 0px #adb5bd;
}


.officers ul {
  padding: 0;
  list-style: none;
  margin: 0 auto;
}

.officers #social-links a {
  display: inline-block;
  width: 36px;
  height: 36px;
  line-height: 34px;
  margin: 10px 10px;
  color: #212529;
  border: 1px solid #212529;
  border-radius: 50%;
}

.officers #social-links a:hover {
  color: #fff;
  background-color: #212529;
}

/* ==========================================================================
   connect Style
========================================================================== */
#connect {
  text-align: center;
}

#connect .subtitle {
  color: #000;
  font-size: 1.1rem;
  font-weight: 200;
}

#connect img {
  height: 150px;
}


#connect .title {
  padding-top: 25px;
  padding-bottom: 25px;
}

#connect .title h3 {
  text-transform: uppercase;
  color: #137ED9;
  font-size: 15px;
  margin-bottom: 0px;
  font-weight: 700;
}

#connect .table {
  margin-top: 30px;
  padding-bottom: 30px;
  border-radius: 4px;
  background: #f8f9fb;
  box-shadow: 0px 2px 18px 0px rgba(198, 198, 198, 0.3);
  -webkit-transition: all .3s linear;
  -moz-transition: all .3s linear;
  -ms-transition: all .3s linear;
  -o-transition: all .3s linear;
  transition: all .3s linear;
}

#connect .table .icon {
  padding-top: 30px;
}

#connect .table .icon i {
  color: #137ED9;
  font-size: 42px;
}

#connect .table .connect-header {
  position: relative;
  padding-bottom: 20px;
  text-align: center;
}

#connect .table .connect-header img {
  margin: 20px 0;
}

#connect .slack .connect-header img {
  border-radius: 50%;
}

#connect .table .connect-header .price-value {
  font-size: 24px;
  color: #585b60;
  position: relative;
  text-align: center;
  font-weight: 700;
  line-height: 62px;
}

#connect .table .connect-header .price-value sup {
  font-size: 18px;
  font-weight: 500;
  top: -18px;
}

#connect .table .connect-header .price-value span {
  font-size: 14px;
  font-weight: 500;
}

#connect .connect-header p {
  width: 90%;
  text-align: center;
  margin: 0 auto;
}

.btn-outline-primary {
  width: 100px;
}

#connect .table .description {
  text-align: center;
  padding: 0px 50px;
  margin-bottom: 20px;
  height: 200px;
}

#connect .table .description li {
  font-size: 14px;
  font-weight: 400;
  color: #abacae;
  padding-bottom: 15px;
}


@media screen and (min-width: 1200px){
  #connect .table {
    height: 650px;
  }

  .btn-outline-primary {
    position: absolute;
    bottom: 10px;
    left: 0;
    right: 0;
    margin: 20px auto;

  }
}

/* ==========================================================================
Sponsors
========================================================================== */
#sponsors .logo {
  text-align: center;
}

#sponsors .logo img {
  width: 60%;
  max-width: 500px;
}



/*--------- F O O T E R ---------*/
.page-footer {
  background-color: #212529;
  color: #DEDEDE;
  /* padding: 100px 0; */
}

.page-footer .container {
  margin-top: 100px;
}

.list-unstyled li {
  line-height: 40px;
}

.list-unstyled li a {
  color: #D0D0D0;
  text-decoration: none;
  list-style: none;
  font-weight: lighter;
}

.social-icon a {
  color: #FFF;
  width: 50px;
  height: 50px;
  line-height: 48px;
  display: inline-block;
  text-align: center;
  border: 1px solid #FFF;
  border-radius: 100%;
  font-size: 20px;
  margin: 15px 6px 12px 4px;
  transition: all 0.3s ease-in-out 0s;
  -moz-transition: all 0.3s ease-in-out 0s;
  -webkit-transition: all 0.3s ease-in-out 0s;
  -o-transition: all 0.3s ease-in-out 0s;
}

.social-icon a:hover {
  color: #212529 !important;
  background-color: #FFF;
}

.footer-copyright {
  margin: 50px auto 0 auto;
  background-color: #212529;
  max-width: 60%;
}

.footer-copyright a {
  text-decoration: none;
  list-style: none;
}

